--- a/trunk/limehd/res/xml/lime_array_number_shift.xml
+++ b/trunk/limehd/res/xml/lime_array_number_shift.xml
@@ -22,74 +22,74 @@
 */
 -->
 
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/net.toload.main.hd"
-    android:keyWidth="10%p"
-    android:horizontalGap="0px"
-    android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height"
+<Keyboard xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+    limehd:keyWidth="10%p"
+    limehd:horizontalGap="0px"
+    limehd:verticalGap="0px"
+    limehd:keyHeight="@dimen/key_height"
     >
 
     <Row>
-      <Key android:codes="33" android:keyLabel="!" 
-			 android:keyEdgeFlags="left" />
-		<Key android:codes="64" android:keyLabel="\@" />
-		<Key android:codes="35" android:keyLabel="\#" />
-		<Key android:codes="36" android:keyLabel="$" />
-		<Key android:codes="37" android:keyLabel="%" />
-		<Key android:codes="94" android:keyLabel="^" />
-		<Key android:codes="38" android:keyLabel="&amp;" />
-		<Key android:codes="42" android:keyLabel="*" />
-		<Key android:codes="40" android:keyLabel="(" />
-		<Key android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right" />
+      <Key limehd:codes="33" limehd:keyLabel="!" 
+			 limehd:keyEdgeFlags="left" />
+		<Key limehd:codes="64" limehd:keyLabel="\@" />
+		<Key limehd:codes="35" limehd:keyLabel="\#" />
+		<Key limehd:codes="36" limehd:keyLabel="$" />
+		<Key limehd:codes="37" limehd:keyLabel="%" />
+		<Key limehd:codes="94" limehd:keyLabel="^" />
+		<Key limehd:codes="38" limehd:keyLabel="&amp;" />
+		<Key limehd:codes="42" limehd:keyLabel="*" />
+		<Key limehd:codes="40" limehd:keyLabel="(" />
+		<Key limehd:codes="41" limehd:keyLabel=")" limehd:keyEdgeFlags="right" />
     </Row>
     <Row>
-        <Key android:codes="81" android:keyLabel="Q\n1⇡" android:keyEdgeFlags="left"/>
-        <Key android:codes="87" android:keyLabel="W\n2⇡"/>
-        <Key android:codes="69" android:keyLabel="E\n3⇡"/>
-        <Key android:codes="82" android:keyLabel="R\n4⇡"/>
-        <Key android:codes="84" android:keyLabel="T\n5⇡"/>
-        <Key android:codes="89" android:keyLabel="Y\n6⇡"/>
-        <Key android:codes="85" android:keyLabel="U\n7⇡"/>
-        <Key android:codes="73" android:keyLabel="I\n8⇡"/>
-        <Key android:codes="79" android:keyLabel="O\n9⇡"/>
-        <Key android:codes="80" android:keyLabel="P\n0⇡" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="81" limehd:keyLabel="Q\n1⇡" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="87" limehd:keyLabel="W\n2⇡"/>
+        <Key limehd:codes="69" limehd:keyLabel="E\n3⇡"/>
+        <Key limehd:codes="82" limehd:keyLabel="R\n4⇡"/>
+        <Key limehd:codes="84" limehd:keyLabel="T\n5⇡"/>
+        <Key limehd:codes="89" limehd:keyLabel="Y\n6⇡"/>
+        <Key limehd:codes="85" limehd:keyLabel="U\n7⇡"/>
+        <Key limehd:codes="73" limehd:keyLabel="I\n8⇡"/>
+        <Key limehd:codes="79" limehd:keyLabel="O\n9⇡"/>
+        <Key limehd:codes="80" limehd:keyLabel="P\n0⇡" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="65" android:keyLabel="A\n1−" android:keyEdgeFlags="left"/>
-        <Key android:codes="83" android:keyLabel="S\n2−"/>
-        <Key android:codes="68" android:keyLabel="D\n3−"/>
-        <Key android:codes="70" android:keyLabel="F\n4−"/>
-        <Key android:codes="71" android:keyLabel="G\n5−"/>
-        <Key android:codes="72" android:keyLabel="H\n6−"/>
-        <Key android:codes="74" android:keyLabel="J\n7−"/>
-        <Key android:codes="75" android:keyLabel="K\n8−"/>
-        <Key android:codes="76" android:keyLabel="L\n9−"/>
-        <Key android:codes="58" android:keyLabel=":\n0−" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="65" limehd:keyLabel="A\n1−" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="83" limehd:keyLabel="S\n2−"/>
+        <Key limehd:codes="68" limehd:keyLabel="D\n3−"/>
+        <Key limehd:codes="70" limehd:keyLabel="F\n4−"/>
+        <Key limehd:codes="71" limehd:keyLabel="G\n5−"/>
+        <Key limehd:codes="72" limehd:keyLabel="H\n6−"/>
+        <Key limehd:codes="74" limehd:keyLabel="J\n7−"/>
+        <Key limehd:codes="75" limehd:keyLabel="K\n8−"/>
+        <Key limehd:codes="76" limehd:keyLabel="L\n9−"/>
+        <Key limehd:codes="58" limehd:keyLabel=":\n0−" limehd:keyEdgeFlags="right"/>
     </Row> 
      <Row>
-        <Key android:codes="90" android:keyLabel="Z\n1⇣" android:keyEdgeFlags="left"/>
-        <Key android:codes="88" android:keyLabel="X\n2⇣"/>
-        <Key android:codes="67" android:keyLabel="C\n3⇣"/>
-        <Key android:codes="86" android:keyLabel="V\n4⇣"/>
-        <Key android:codes="66" android:keyLabel="B\n5⇣"/>
-        <Key android:codes="78" android:keyLabel="N\n6⇣"/>
-        <Key android:codes="77" android:keyLabel="M\n7⇣"/>
-        <Key android:codes="60" android:keyLabel="&lt;\n8⇣"/>
-        <Key android:codes="62" android:keyLabel="&gt;\n9⇣"  android:popupKeyboard="@xml/popup_c_punctuation"   />
-        <Key android:codes="63" android:keyLabel="\?\n0⇣" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="90" limehd:keyLabel="Z\n1⇣" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="88" limehd:keyLabel="X\n2⇣"/>
+        <Key limehd:codes="67" limehd:keyLabel="C\n3⇣"/>
+        <Key limehd:codes="86" limehd:keyLabel="V\n4⇣"/>
+        <Key limehd:codes="66" limehd:keyLabel="B\n5⇣"/>
+        <Key limehd:codes="78" limehd:keyLabel="N\n6⇣"/>
+        <Key limehd:codes="77" limehd:keyLabel="M\n7⇣"/>
+        <Key limehd:codes="60" limehd:keyLabel="&lt;\n8⇣"/>
+        <Key limehd:codes="62" limehd:keyLabel="&gt;\n9⇣"  limehd:popupKeyboard="@xml/popup_c_punctuation"   />
+        <Key limehd:codes="63" limehd:keyLabel="\?\n0⇣" limehd:keyEdgeFlags="right"/>
     </Row> 
 
-    <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>   
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:iconPreview="@drawable/sym_keyboard_feedback_shift"  android:isModifier="true" 
-                android:keyWidth="15%p" 
-                android:isSticky="true"/>             
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="25%p" android:isRepeatable="true"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" 
-                android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+    <Row limehd:rowEdgeFlags="bottom">
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>   
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift" limehd:iconPreview="@drawable/sym_keyboard_feedback_shift"  limehd:isModifier="true" 
+                limehd:keyWidth="15%p" 
+                limehd:isSticky="true"/>             
+        <Key limehd:codes="-9" limehd:keyIcon="@drawable/sw" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:iconPreview="@drawable/sw_l"/>
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_lime" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="25%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" 
+                limehd:keyWidth="15%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
     
     
