--- a/trunk/limehd/res/xml/lime_cj.xml
+++ b/trunk/limehd/res/xml/lime_cj.xml
@@ -21,64 +21,64 @@
 **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/net.toload.main.hd"
-    android:keyWidth="10%p"
-    android:horizontalGap="0px"
-    android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height"
+<Keyboard xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+    limehd:keyWidth="10%p"
+    limehd:horizontalGap="0px"
+    limehd:verticalGap="0px"
+    limehd:keyHeight="@dimen/key_height"
     >
 
       <Row>
-        <Key android:codes="113" android:keyLabel="q\n手" android:keyEdgeFlags="left"/>
-        <Key android:codes="119" android:keyLabel="w\n田"/>
-        <Key android:codes="101" android:keyLabel="e\n水"/>
-        <Key android:codes="114" android:keyLabel="r\n口"/>
-        <Key android:codes="116" android:keyLabel="t\n廿"/>
-        <Key android:codes="121" android:keyLabel="y\n卜"/>
-        <Key android:codes="117" android:keyLabel="u\n山"/>
-        <Key android:codes="105" android:keyLabel="i\n戈"/>
-        <Key android:codes="111" android:keyLabel="o\n人"/>
-        <Key android:codes="112" android:keyLabel="p\n心" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="113" limehd:keyLabel="q\n手" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="119" limehd:keyLabel="w\n田"/>
+        <Key limehd:codes="101" limehd:keyLabel="e\n水"/>
+        <Key limehd:codes="114" limehd:keyLabel="r\n口"/>
+        <Key limehd:codes="116" limehd:keyLabel="t\n廿"/>
+        <Key limehd:codes="121" limehd:keyLabel="y\n卜"/>
+        <Key limehd:codes="117" limehd:keyLabel="u\n山"/>
+        <Key limehd:codes="105" limehd:keyLabel="i\n戈"/>
+        <Key limehd:codes="111" limehd:keyLabel="o\n人"/>
+        <Key limehd:codes="112" limehd:keyLabel="p\n心" limehd:keyEdgeFlags="right"/>
     </Row>
     
      <Row>
-        <Key android:codes="97" android:keyLabel="a\n日" android:horizontalGap="5%p" android:keyEdgeFlags="left"/>
-        <Key android:codes="115" android:keyLabel="s\n尸"/>
-        <Key android:codes="100" android:keyLabel="d\n木"/>
-        <Key android:codes="102" android:keyLabel="f\n火"/>
-        <Key android:codes="103" android:keyLabel="g\n土"/>
-        <Key android:codes="104" android:keyLabel="h\n竹"/>
-        <Key android:codes="106" android:keyLabel="j\n十"/>
-        <Key android:codes="107" android:keyLabel="k\n大"/>
-        <Key android:codes="108" android:keyLabel="l\n中" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="97" limehd:keyLabel="a\n日" limehd:horizontalGap="5%p" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="115" limehd:keyLabel="s\n尸"/>
+        <Key limehd:codes="100" limehd:keyLabel="d\n木"/>
+        <Key limehd:codes="102" limehd:keyLabel="f\n火"/>
+        <Key limehd:codes="103" limehd:keyLabel="g\n土"/>
+        <Key limehd:codes="104" limehd:keyLabel="h\n竹"/>
+        <Key limehd:codes="106" limehd:keyLabel="j\n十"/>
+        <Key limehd:codes="107" limehd:keyLabel="k\n大"/>
+        <Key limehd:codes="108" limehd:keyLabel="l\n中" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:iconPreview="@drawable/sym_keyboard_feedback_shift" android:isModifier="true" 
-                android:keyWidth="15%p" android:isSticky="true" android:keyEdgeFlags="left"/>
-        <Key android:codes="122" android:keyLabel="z\n重" />
-        <Key android:codes="120" android:keyLabel="x\n難"/>
-        <Key android:codes="99" android:keyLabel="c\n金"/>
-        <Key android:codes="118" android:keyLabel="v\n女"/>
-        <Key android:codes="98" android:keyLabel="b\n月"/>
-        <Key android:codes="110" android:keyLabel="n\n弓"/>
-        <Key android:codes="109" android:keyLabel="m\n一"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" 
-                android:keyWidth="15%p" android:keyEdgeFlags="right"
-                android:isRepeatable="true"/>
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift" limehd:iconPreview="@drawable/sym_keyboard_feedback_shift" limehd:isModifier="true" 
+                limehd:keyWidth="15%p" limehd:isSticky="true" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="122" limehd:keyLabel="z\n重" />
+        <Key limehd:codes="120" limehd:keyLabel="x\n難"/>
+        <Key limehd:codes="99" limehd:keyLabel="c\n金"/>
+        <Key limehd:codes="118" limehd:keyLabel="v\n女"/>
+        <Key limehd:codes="98" limehd:keyLabel="b\n月"/>
+        <Key limehd:codes="110" limehd:keyLabel="n\n弓"/>
+        <Key limehd:codes="109" limehd:keyLabel="m\n一"/>
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" 
+                limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
+                limehd:isRepeatable="true"/>
     </Row>
 
-    <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="44" android:keyLabel="," android:keyWidth="10%p"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="25%p" android:isRepeatable="true"/>
-        <Key android:codes="46" 
-        		android:keyLabel="."
-				 android:popupKeyboard="@xml/popup_c_punctuation"   
-        		android:keyWidth="10%p"/>
-        <Key android:codes="-2" android:keyLabel="123" android:isModifier="true" />
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+    <Row limehd:rowEdgeFlags="bottom">
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+        <Key limehd:codes="-9" limehd:keyIcon="@drawable/sw" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:iconPreview="@drawable/sw_l"/>
+        <Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p"/>
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_lime" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="25%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="46" 
+        		limehd:keyLabel="."
+				 limehd:popupKeyboard="@xml/popup_c_punctuation"   
+        		limehd:keyWidth="10%p"/>
+        <Key limehd:codes="-2" limehd:keyLabel="123" limehd:isModifier="true" />
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
     
 </Keyboard>
