--- a/trunk/limehd/res/xml/lime_number_symbol_shift.xml
+++ b/trunk/limehd/res/xml/lime_number_symbol_shift.xml
@@ -21,84 +21,84 @@
 **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/net.toload.main.hd"
-	android:keyWidth="10%p" android:horizontalGap="0px"
-	android:verticalGap="0px" android:keyHeight="@dimen/key_height">
+<Keyboard xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+	limehd:keyWidth="10%p" limehd:horizontalGap="0px"
+	limehd:verticalGap="0px" limehd:keyHeight="@dimen/key_height">
 
 	<Row>
-		 <Key android:codes="64" android:keyLabel="\@" android:keyEdgeFlags="left"/>
-        <Key android:codes="35" android:keyLabel="\#"/>
-        <Key android:codes="36" android:keyLabel="$"/>
-        <Key android:codes="37" android:keyLabel="%"/>
-        <Key android:codes="38" android:keyLabel="&amp;"/>
-        <Key android:codes="42" android:keyLabel="*"/>
-        <Key android:codes="33" android:keyLabel="!"/>
-        <Key android:codes="47" android:keyLabel="/"/>
-        <Key android:codes="40" android:keyLabel="("/>
-        <Key android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right"/>
+		 <Key limehd:codes="64" limehd:keyLabel="\@" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="35" limehd:keyLabel="\#"/>
+        <Key limehd:codes="36" limehd:keyLabel="$"/>
+        <Key limehd:codes="37" limehd:keyLabel="%"/>
+        <Key limehd:codes="38" limehd:keyLabel="&amp;"/>
+        <Key limehd:codes="42" limehd:keyLabel="*"/>
+        <Key limehd:codes="33" limehd:keyLabel="!"/>
+        <Key limehd:codes="47" limehd:keyLabel="/"/>
+        <Key limehd:codes="40" limehd:keyLabel="("/>
+        <Key limehd:codes="41" limehd:keyLabel=")" limehd:keyEdgeFlags="right"/>
 	</Row>
 
 	<Row>
-		<Key android:codes="81" android:keyLabel="Q" android:keyEdgeFlags="left" />
-		<Key android:codes="87" android:keyLabel="W" />
-		<Key android:codes="69" android:keyLabel="E" />
-		<Key android:codes="82" android:keyLabel="R" />
-		<Key android:codes="84" android:keyLabel="T" />
-		<Key android:codes="89" android:keyLabel="Y" />
-		<Key android:codes="85" android:keyLabel="U" />
-		<Key android:codes="73" android:keyLabel="I" />
-		<Key android:codes="79" android:keyLabel="O" />
-		<Key android:codes="80" android:keyLabel="P" android:keyEdgeFlags="right" />
+		<Key limehd:codes="81" limehd:keyLabel="Q" limehd:keyEdgeFlags="left" />
+		<Key limehd:codes="87" limehd:keyLabel="W" />
+		<Key limehd:codes="69" limehd:keyLabel="E" />
+		<Key limehd:codes="82" limehd:keyLabel="R" />
+		<Key limehd:codes="84" limehd:keyLabel="T" />
+		<Key limehd:codes="89" limehd:keyLabel="Y" />
+		<Key limehd:codes="85" limehd:keyLabel="U" />
+		<Key limehd:codes="73" limehd:keyLabel="I" />
+		<Key limehd:codes="79" limehd:keyLabel="O" />
+		<Key limehd:codes="80" limehd:keyLabel="P" limehd:keyEdgeFlags="right" />
 	</Row>
 
 	<Row>
-		<Key android:codes="65" android:keyLabel="A" android:keyEdgeFlags="left" />
-		<Key android:codes="83" android:keyLabel="S" />
-		<Key android:codes="68" android:keyLabel="D" />
-		<Key android:codes="70" android:keyLabel="F" />
-		<Key android:codes="71" android:keyLabel="G" />
-		<Key android:codes="72" android:keyLabel="H" />
-		<Key android:codes="74" android:keyLabel="J" />
-		<Key android:codes="75" android:keyLabel="K" />
-		<Key android:codes="76" android:keyLabel="L" />
-		<Key android:codes="58" android:keyLabel=":" android:keyEdgeFlags="right" />
+		<Key limehd:codes="65" limehd:keyLabel="A" limehd:keyEdgeFlags="left" />
+		<Key limehd:codes="83" limehd:keyLabel="S" />
+		<Key limehd:codes="68" limehd:keyLabel="D" />
+		<Key limehd:codes="70" limehd:keyLabel="F" />
+		<Key limehd:codes="71" limehd:keyLabel="G" />
+		<Key limehd:codes="72" limehd:keyLabel="H" />
+		<Key limehd:codes="74" limehd:keyLabel="J" />
+		<Key limehd:codes="75" limehd:keyLabel="K" />
+		<Key limehd:codes="76" limehd:keyLabel="L" />
+		<Key limehd:codes="58" limehd:keyLabel=":" limehd:keyEdgeFlags="right" />
 	</Row>
 
 
 	<Row>
-		<Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
-			 android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left" />
-		<Key android:codes="90" android:keyLabel="Z" />
-		<Key android:codes="88" android:keyLabel="X" />
-		<Key android:codes="67" android:keyLabel="C" />
-		<Key android:codes="86" android:keyLabel="V" />
-		<Key android:codes="66" android:keyLabel="B" />
-		<Key android:codes="78" android:keyLabel="N" />
-		<Key android:codes="77" android:keyLabel="M" />
-		<Key android:codes="34" android:keyLabel="&quot;"/>
-		<Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true"
-			 android:keyEdgeFlags="right"	android:isRepeatable="true" />
+		<Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
+			 limehd:isModifier="true" limehd:isSticky="true" limehd:keyEdgeFlags="left" />
+		<Key limehd:codes="90" limehd:keyLabel="Z" />
+		<Key limehd:codes="88" limehd:keyLabel="X" />
+		<Key limehd:codes="67" limehd:keyLabel="C" />
+		<Key limehd:codes="86" limehd:keyLabel="V" />
+		<Key limehd:codes="66" limehd:keyLabel="B" />
+		<Key limehd:codes="78" limehd:keyLabel="N" />
+		<Key limehd:codes="77" limehd:keyLabel="M" />
+		<Key limehd:codes="34" limehd:keyLabel="&quot;"/>
+		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+			 limehd:keyEdgeFlags="right"	limehd:isRepeatable="true" />
 	</Row>
 
 
-	<Row android:rowEdgeFlags="bottom">
-		<Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true"
-			  	android:keyWidth="15%p" android:keyEdgeFlags="left" />
-		<Key android:codes="-9" 
-				android:keyIcon="@drawable/sw" android:isModifier="true" 
-				android:keyWidth="10%p" 
-				android:iconPreview="@drawable/sw_l"/>
-		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"
-				android:keyWidth="15%p" android:isRepeatable="true" />
-		<Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p" />
-		<Key android:codes="62" android:keyLabel="&gt;" 
-								 android:popupKeyboard="@xml/popup_punctuation"  
-								android:keyWidth="10%p" />
-		<Key android:codes="63" android:keyLabel="\?" android:keyWidth="10%p" />
-		<Key android:codes="95" android:keyLabel="_" />
-		<Key android:codes="43" android:keyLabel="+" />
-		<Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
-				android:keyEdgeFlags="right" />
+	<Row limehd:rowEdgeFlags="bottom">
+		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"
+			  	limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
+		<Key limehd:codes="-9" 
+				limehd:keyIcon="@drawable/sw" limehd:isModifier="true" 
+				limehd:keyWidth="10%p" 
+				limehd:iconPreview="@drawable/sw_l"/>
+		<Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_lime" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+				limehd:keyWidth="15%p" limehd:isRepeatable="true" />
+		<Key limehd:codes="60" limehd:keyLabel="&lt;" limehd:keyWidth="10%p" />
+		<Key limehd:codes="62" limehd:keyLabel="&gt;" 
+								 limehd:popupKeyboard="@xml/popup_punctuation"  
+								limehd:keyWidth="10%p" />
+		<Key limehd:codes="63" limehd:keyLabel="\?" limehd:keyWidth="10%p" />
+		<Key limehd:codes="95" limehd:keyLabel="_" />
+		<Key limehd:codes="43" limehd:keyLabel="+" />
+		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+				limehd:keyEdgeFlags="right" />
 	</Row>
 </Keyboard>
     
