--- a/trunk/limehd/res/xml/lime_phonetic.xml
+++ b/trunk/limehd/res/xml/lime_phonetic.xml
@@ -21,75 +21,75 @@
 **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/net.toload.main.hd"
-    android:keyWidth="10%p"
-    android:horizontalGap="0px"
-    android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height"
+<Keyboard xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+    limehd:keyWidth="10%p"
+    limehd:horizontalGap="0px"
+    limehd:verticalGap="0px"
+    limehd:keyHeight="@dimen/key_height"
     >
 
     <Row>
-        <Key android:codes="49" android:keyLabel="1\nㄅ" android:keyEdgeFlags="left"/>
-        <Key android:codes="50" android:keyLabel="2\nㄉ" />
-        <Key android:codes="51" android:keyLabel="3\nˇ" />
-        <Key android:codes="52" android:keyLabel="4\nˋ" />
-        <Key android:codes="53" android:keyLabel="5\nㄓ" />
-        <Key android:codes="54" android:keyLabel="6\nˊ" />
-        <Key android:codes="55" android:keyLabel="7\n˙" />
-        <Key android:codes="56" android:keyLabel="8\nㄚ" />
-        <Key android:codes="57" android:keyLabel="9\nㄞ" />
-        <Key android:codes="48" android:keyLabel="0\nㄢ"  android:keyEdgeFlags="right"/>
+        <Key limehd:codes="49" limehd:keyLabel="1\nㄅ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="50" limehd:keyLabel="2\nㄉ" />
+        <Key limehd:codes="51" limehd:keyLabel="3\nˇ" />
+        <Key limehd:codes="52" limehd:keyLabel="4\nˋ" />
+        <Key limehd:codes="53" limehd:keyLabel="5\nㄓ" />
+        <Key limehd:codes="54" limehd:keyLabel="6\nˊ" />
+        <Key limehd:codes="55" limehd:keyLabel="7\n˙" />
+        <Key limehd:codes="56" limehd:keyLabel="8\nㄚ" />
+        <Key limehd:codes="57" limehd:keyLabel="9\nㄞ" />
+        <Key limehd:codes="48" limehd:keyLabel="0\nㄢ"  limehd:keyEdgeFlags="right"/>
     </Row>
     
      <Row>
-        <Key android:codes="113" android:keyLabel="q\nㄆ" android:keyEdgeFlags="left"/>
-        <Key android:codes="119" android:keyLabel="w\nㄊ" />
-        <Key android:codes="101" android:keyLabel="e\nㄍ" />
-        <Key android:codes="114" android:keyLabel="r\nㄐ" />
-        <Key android:codes="116" android:keyLabel="t\nㄔ" />
-        <Key android:codes="121" android:keyLabel="y\nㄗ" />
-        <Key android:codes="117" android:keyLabel="u\n一" />
-        <Key android:codes="105" android:keyLabel="i\nㄛ" />
-        <Key android:codes="111" android:keyLabel="o\nㄟ" />
-        <Key android:codes="112" android:keyLabel="p\nㄣ" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="113" limehd:keyLabel="q\nㄆ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="119" limehd:keyLabel="w\nㄊ" />
+        <Key limehd:codes="101" limehd:keyLabel="e\nㄍ" />
+        <Key limehd:codes="114" limehd:keyLabel="r\nㄐ" />
+        <Key limehd:codes="116" limehd:keyLabel="t\nㄔ" />
+        <Key limehd:codes="121" limehd:keyLabel="y\nㄗ" />
+        <Key limehd:codes="117" limehd:keyLabel="u\n一" />
+        <Key limehd:codes="105" limehd:keyLabel="i\nㄛ" />
+        <Key limehd:codes="111" limehd:keyLabel="o\nㄟ" />
+        <Key limehd:codes="112" limehd:keyLabel="p\nㄣ" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="97" android:keyLabel="a\nㄇ" android:keyEdgeFlags="left"/>
-        <Key android:codes="115" android:keyLabel="s\nㄋ"/>
-        <Key android:codes="100" android:keyLabel="d\nㄎ"/>
-        <Key android:codes="102" android:keyLabel="f\nㄑ"/>
-        <Key android:codes="103" android:keyLabel="g\nㄕ"/>
-        <Key android:codes="104" android:keyLabel="h\nㄘ"/>
-        <Key android:codes="106" android:keyLabel="j\nㄨ"/>
-        <Key android:codes="107" android:keyLabel="k\nㄜ"/>
-        <Key android:codes="108" android:keyLabel="l\nㄠ"/>
-        <Key android:codes="59" android:keyLabel=";\nㄤ" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="97" limehd:keyLabel="a\nㄇ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="115" limehd:keyLabel="s\nㄋ"/>
+        <Key limehd:codes="100" limehd:keyLabel="d\nㄎ"/>
+        <Key limehd:codes="102" limehd:keyLabel="f\nㄑ"/>
+        <Key limehd:codes="103" limehd:keyLabel="g\nㄕ"/>
+        <Key limehd:codes="104" limehd:keyLabel="h\nㄘ"/>
+        <Key limehd:codes="106" limehd:keyLabel="j\nㄨ"/>
+        <Key limehd:codes="107" limehd:keyLabel="k\nㄜ"/>
+        <Key limehd:codes="108" limehd:keyLabel="l\nㄠ"/>
+        <Key limehd:codes="59" limehd:keyLabel=";\nㄤ" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="122" android:keyLabel="z\nㄈ" android:keyEdgeFlags="left"/>
-        <Key android:codes="120" android:keyLabel="x\nㄌ" />
-        <Key android:codes="99" android:keyLabel="c\nㄏ" />
-        <Key android:codes="118" android:keyLabel="v\nㄒ" />
-        <Key android:codes="98" android:keyLabel="b\nㄖ" />
-        <Key android:codes="110" android:keyLabel="n\nㄙ" />
-        <Key android:codes="109" android:keyLabel="m\nㄩ" />
-        <Key android:codes="44" android:keyLabel=",\nㄝ" />
-        <Key android:codes="46" android:keyLabel=".\nㄡ"   
-        	 android:popupKeyboard="@xml/popup_c_punctuation" />
-        <Key android:codes="47" android:keyLabel="/\nㄥ" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="122" limehd:keyLabel="z\nㄈ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="120" limehd:keyLabel="x\nㄌ" />
+        <Key limehd:codes="99" limehd:keyLabel="c\nㄏ" />
+        <Key limehd:codes="118" limehd:keyLabel="v\nㄒ" />
+        <Key limehd:codes="98" limehd:keyLabel="b\nㄖ" />
+        <Key limehd:codes="110" limehd:keyLabel="n\nㄙ" />
+        <Key limehd:codes="109" limehd:keyLabel="m\nㄩ" />
+        <Key limehd:codes="44" limehd:keyLabel=",\nㄝ" />
+        <Key limehd:codes="46" limehd:keyLabel=".\nㄡ"   
+        	 limehd:popupKeyboard="@xml/popup_c_punctuation" />
+        <Key limehd:codes="47" limehd:keyLabel="/\nㄥ" limehd:keyEdgeFlags="right"/>
     </Row>
     
-    <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true"  android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
-			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" />
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true"  android:iconPreview="@drawable/sw_l"/>     
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="20%p" android:isRepeatable="true"/>
-        <Key android:codes="45" android:keyLabel="-\nㄦ"/>
-        <Key android:codes="-5" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" android:isRepeatable="true"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+    <Row limehd:rowEdgeFlags="bottom">
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"  limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
+			limehd:keyWidth="15%p" limehd:isModifier="true" limehd:isSticky="true" />
+        <Key limehd:codes="-9" limehd:keyIcon="@drawable/sw" limehd:isModifier="true"  limehd:iconPreview="@drawable/sw_l"/>     
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_lime" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="20%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="45" limehd:keyLabel="-\nㄦ"/>
+        <Key limehd:codes="-5" limehd:keyWidth="15%p" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" limehd:isRepeatable="true"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
     
 </Keyboard>
