--- a/trunk/limehd/res/xml/lime_phonetic_shift.xml
+++ b/trunk/limehd/res/xml/lime_phonetic_shift.xml
@@ -22,79 +22,79 @@
 */
 -->
 
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/net.toload.main.hd"
-    android:keyWidth="10%p"
-    android:horizontalGap="0px"
-    android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height"
+<Keyboard xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+    limehd:keyWidth="10%p"
+    limehd:horizontalGap="0px"
+    limehd:verticalGap="0px"
+    limehd:keyHeight="@dimen/key_height"
     >
 
     
     <Row>
-    	<Key android:codes="33" android:keyLabel="!\nㄅ" 
-			 android:keyEdgeFlags="left" />
-		<Key android:codes="64" android:keyLabel="\@\nㄉ" />
-		<Key android:codes="35" android:keyLabel="\#\nˇ" />
-		<Key android:codes="36" android:keyLabel="$\nˋ" />
-		<Key android:codes="37" android:keyLabel="%\nㄓ" />
-		<Key android:codes="94" android:keyLabel="^\nˊ" />
-		<Key android:codes="38" android:keyLabel="&amp;\n˙" />
-		<Key android:codes="42" android:keyLabel="*\nㄚ" />
-		<Key android:codes="40" android:keyLabel="(\nㄞ" />
-		<Key android:codes="41" android:keyLabel=")\nㄢ" android:keyEdgeFlags="right" />
+    	<Key limehd:codes="33" limehd:keyLabel="!\nㄅ" 
+			 limehd:keyEdgeFlags="left" />
+		<Key limehd:codes="64" limehd:keyLabel="\@\nㄉ" />
+		<Key limehd:codes="35" limehd:keyLabel="\#\nˇ" />
+		<Key limehd:codes="36" limehd:keyLabel="$\nˋ" />
+		<Key limehd:codes="37" limehd:keyLabel="%\nㄓ" />
+		<Key limehd:codes="94" limehd:keyLabel="^\nˊ" />
+		<Key limehd:codes="38" limehd:keyLabel="&amp;\n˙" />
+		<Key limehd:codes="42" limehd:keyLabel="*\nㄚ" />
+		<Key limehd:codes="40" limehd:keyLabel="(\nㄞ" />
+		<Key limehd:codes="41" limehd:keyLabel=")\nㄢ" limehd:keyEdgeFlags="right" />
 		
     </Row>
     
     <Row>
-        <Key android:codes="81" android:keyLabel="Q\nㄆ" android:keyEdgeFlags="left"/>
-        <Key android:codes="87" android:keyLabel="W\nㄊ" />
-        <Key android:codes="69" android:keyLabel="E\nㄍ" />
-        <Key android:codes="82" android:keyLabel="R\nㄐ" />
-        <Key android:codes="84" android:keyLabel="T\nㄔ" />
-        <Key android:codes="89" android:keyLabel="Y\nㄗ" />
-        <Key android:codes="85" android:keyLabel="U\n一" />
-        <Key android:codes="73" android:keyLabel="I\nㄛ" />
-        <Key android:codes="79" android:keyLabel="O\nㄟ" />
-        <Key android:codes="80" android:keyLabel="P\nㄣ" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="81" limehd:keyLabel="Q\nㄆ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="87" limehd:keyLabel="W\nㄊ" />
+        <Key limehd:codes="69" limehd:keyLabel="E\nㄍ" />
+        <Key limehd:codes="82" limehd:keyLabel="R\nㄐ" />
+        <Key limehd:codes="84" limehd:keyLabel="T\nㄔ" />
+        <Key limehd:codes="89" limehd:keyLabel="Y\nㄗ" />
+        <Key limehd:codes="85" limehd:keyLabel="U\n一" />
+        <Key limehd:codes="73" limehd:keyLabel="I\nㄛ" />
+        <Key limehd:codes="79" limehd:keyLabel="O\nㄟ" />
+        <Key limehd:codes="80" limehd:keyLabel="P\nㄣ" limehd:keyEdgeFlags="right"/>
     </Row>
     
      <Row>
-        <Key android:codes="65" android:keyLabel="A\nㄇ" android:keyEdgeFlags="left"/>
-        <Key android:codes="83" android:keyLabel="S\nㄋ"/>
-        <Key android:codes="68" android:keyLabel="D\nㄎ"/>
-        <Key android:codes="70" android:keyLabel="F\nㄑ"/>
-        <Key android:codes="71" android:keyLabel="G\nㄕ"/>
-        <Key android:codes="72" android:keyLabel="H\nㄘ"/>
-        <Key android:codes="74" android:keyLabel="J\nㄨ"/>
-        <Key android:codes="75" android:keyLabel="K\nㄜ"/>
-        <Key android:codes="76" android:keyLabel="L\nㄠ"/>
-        <Key android:codes="58" android:keyLabel=":\nㄤ" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="65" limehd:keyLabel="A\nㄇ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="83" limehd:keyLabel="S\nㄋ"/>
+        <Key limehd:codes="68" limehd:keyLabel="D\nㄎ"/>
+        <Key limehd:codes="70" limehd:keyLabel="F\nㄑ"/>
+        <Key limehd:codes="71" limehd:keyLabel="G\nㄕ"/>
+        <Key limehd:codes="72" limehd:keyLabel="H\nㄘ"/>
+        <Key limehd:codes="74" limehd:keyLabel="J\nㄨ"/>
+        <Key limehd:codes="75" limehd:keyLabel="K\nㄜ"/>
+        <Key limehd:codes="76" limehd:keyLabel="L\nㄠ"/>
+        <Key limehd:codes="58" limehd:keyLabel=":\nㄤ" limehd:keyEdgeFlags="right"/>
     </Row>
     
    <Row>
-        <Key android:codes="90" android:keyLabel="Z\nㄈ" android:keyEdgeFlags="left"/>
-        <Key android:codes="88" android:keyLabel="X\nㄌ" />
-        <Key android:codes="67" android:keyLabel="C\nㄏ" />
-        <Key android:codes="86" android:keyLabel="V\nㄒ" />
-        <Key android:codes="66" android:keyLabel="B\nㄖ" />
-        <Key android:codes="78" android:keyLabel="N\nㄙ" />
-        <Key android:codes="77" android:keyLabel="M\nㄩ" />
-        <Key android:codes="60" android:keyLabel="&lt;\nㄝ" />
-        <Key android:codes="62" android:keyLabel="&gt;\nㄡ"   
-        	 android:popupKeyboard="@xml/popup_c_punctuation" />
-        <Key android:codes="63" android:keyLabel="\?\nㄥ" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="90" limehd:keyLabel="Z\nㄈ" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="88" limehd:keyLabel="X\nㄌ" />
+        <Key limehd:codes="67" limehd:keyLabel="C\nㄏ" />
+        <Key limehd:codes="86" limehd:keyLabel="V\nㄒ" />
+        <Key limehd:codes="66" limehd:keyLabel="B\nㄖ" />
+        <Key limehd:codes="78" limehd:keyLabel="N\nㄙ" />
+        <Key limehd:codes="77" limehd:keyLabel="M\nㄩ" />
+        <Key limehd:codes="60" limehd:keyLabel="&lt;\nㄝ" />
+        <Key limehd:codes="62" limehd:keyLabel="&gt;\nㄡ"   
+        	 limehd:popupKeyboard="@xml/popup_c_punctuation" />
+        <Key limehd:codes="63" limehd:keyLabel="\?\nㄥ" limehd:keyEdgeFlags="right"/>
     </Row>    
     
     
-    <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true"  android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
-			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" />
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:isModifier="true"  android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime" android:iconPreview="@drawable/sym_keyboard_feedback_space"  android:keyWidth="20%p" android:isRepeatable="true"/>
-        <Key android:codes="61" android:keyLabel="=\nㄦ"/>
-        <Key android:codes="-5" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true" android:isRepeatable="true"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+    <Row limehd:rowEdgeFlags="bottom">
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"  limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
+			limehd:keyWidth="15%p" limehd:isModifier="true" limehd:isSticky="true" />
+        <Key limehd:codes="-9" limehd:keyIcon="@drawable/sw" limehd:isModifier="true"  limehd:iconPreview="@drawable/sw_l"/>
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_lime" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="20%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="61" limehd:keyLabel="=\nㄦ"/>
+        <Key limehd:codes="-5" limehd:keyWidth="15%p" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" limehd:isRepeatable="true"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
     
