--- a/trunk/limehd/res/xml/symbols.xml
+++ b/trunk/limehd/res/xml/symbols.xml
@@ -41,68 +41,68 @@
 */
 -->
 
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/net.toload.main.hd"
-    android:keyWidth="10%p"
-    android:horizontalGap="0px"
-    android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height"
+<Keyboard xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
+    limehd:keyWidth="10%p"
+    limehd:horizontalGap="0px"
+    limehd:verticalGap="0px"
+    limehd:keyHeight="@dimen/key_height"
     >
 
     <Row>
-        <Key android:codes="49" android:keyLabel="1" android:keyEdgeFlags="left"/>
-        <Key android:codes="50" android:keyLabel="2"/>
-        <Key android:codes="51" android:keyLabel="3"/>
-        <Key android:codes="52" android:keyLabel="4"/>
-        <Key android:codes="53" android:keyLabel="5"/>
-        <Key android:codes="54" android:keyLabel="6"/>
-        <Key android:codes="55" android:keyLabel="7"/>
-        <Key android:codes="56" android:keyLabel="8"/>
-        <Key android:codes="57" android:keyLabel="9"/>
-        <Key android:codes="48" android:keyLabel="0" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="49" limehd:keyLabel="1" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="50" limehd:keyLabel="2"/>
+        <Key limehd:codes="51" limehd:keyLabel="3"/>
+        <Key limehd:codes="52" limehd:keyLabel="4"/>
+        <Key limehd:codes="53" limehd:keyLabel="5"/>
+        <Key limehd:codes="54" limehd:keyLabel="6"/>
+        <Key limehd:codes="55" limehd:keyLabel="7"/>
+        <Key limehd:codes="56" limehd:keyLabel="8"/>
+        <Key limehd:codes="57" limehd:keyLabel="9"/>
+        <Key limehd:codes="48" limehd:keyLabel="0" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="64" android:keyLabel="\@" android:keyEdgeFlags="left"/>
-        <Key android:codes="35" android:keyLabel="\#"/>
-        <Key android:codes="36" android:keyLabel="$"/>
-        <Key android:codes="37" android:keyLabel="%"/>
-        <Key android:codes="38" android:keyLabel="&amp;"/>
-        <Key android:codes="42" android:keyLabel="*"/>
-        <Key android:codes="45" android:keyLabel="-"/>
-        <Key android:codes="43" android:keyLabel="+"/>
-        <Key android:codes="40" android:keyLabel="("/>
-        <Key android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right"/>
+        <Key limehd:codes="64" limehd:keyLabel="\@" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="35" limehd:keyLabel="\#"/>
+        <Key limehd:codes="36" limehd:keyLabel="$"/>
+        <Key limehd:codes="37" limehd:keyLabel="%"/>
+        <Key limehd:codes="38" limehd:keyLabel="&amp;"/>
+        <Key limehd:codes="42" limehd:keyLabel="*"/>
+        <Key limehd:codes="45" limehd:keyLabel="-"/>
+        <Key limehd:codes="43" limehd:keyLabel="+"/>
+        <Key limehd:codes="40" limehd:keyLabel="("/>
+        <Key limehd:codes="41" limehd:keyLabel=")" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
-                android:keyWidth="15%p" android:isModifier="true"
-                android:isSticky="true" android:keyEdgeFlags="left"/>
-        <Key android:codes="33" android:keyLabel="!" />
-        <Key android:codes="34" android:keyLabel="&quot;"/>
-        <Key android:codes="39" android:keyLabel="\'"/>
-        <Key android:codes="58" android:keyLabel=":"/>
-        <Key android:codes="59" android:keyLabel=";"/>
-        <Key android:codes="47" android:keyLabel="/" />
-        <Key android:codes="63" android:keyLabel="\?"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:isModifier="true"
-                android:keyWidth="15%p" android:keyEdgeFlags="right"
-                android:isRepeatable="true"/>
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
+                limehd:keyWidth="15%p" limehd:isModifier="true"
+                limehd:isSticky="true" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="33" limehd:keyLabel="!" />
+        <Key limehd:codes="34" limehd:keyLabel="&quot;"/>
+        <Key limehd:codes="39" limehd:keyLabel="\'"/>
+        <Key limehd:codes="58" limehd:keyLabel=":"/>
+        <Key limehd:codes="59" limehd:keyLabel=";"/>
+        <Key limehd:codes="47" limehd:keyLabel="/" />
+        <Key limehd:codes="63" limehd:keyLabel="\?"/>
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+                limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
+                limehd:isRepeatable="true"/>
     </Row>
     
-    <Row  android:rowEdgeFlags="bottom">
-        <Key android:codes="-3"  android:keyIcon="@drawable/sym_keyboard_done" android:iconPreview="@drawable/sym_keyboard_feedback_done" android:isModifier="true"
-                android:keyWidth="15%p" android:keyEdgeFlags="left" />
-        <Key android:codes="-2" android:keyLabel="LIME" android:keyWidth="15%p" />
-        <Key android:codes="44" android:keyLabel="," android:keyWidth="10%p" />
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space" 
-        	 android:iconPreview="@drawable/sym_keyboard_feedback_space"
-        	 android:keyWidth="30%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." 
-        						 android:popupKeyboard="@xml/popup_punctuation" 
-        						android:keyWidth="10%p"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:isModifier="true"
-                android:keyWidth="20%p" android:keyEdgeFlags="right"
+    <Row  limehd:rowEdgeFlags="bottom">
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"
+                limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
+        <Key limehd:codes="-2" limehd:keyLabel="LIME" limehd:keyWidth="15%p" />
+        <Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p" />
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space" 
+        	 limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        	 limehd:keyWidth="30%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="46" limehd:keyLabel="." 
+        						 limehd:popupKeyboard="@xml/popup_punctuation" 
+        						limehd:keyWidth="10%p"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+                limehd:keyWidth="20%p" limehd:keyEdgeFlags="right"
                 />
     </Row>
 </Keyboard>
